# homelab

./: .cursorrules  .env.example  .gitignore  README.md  SECURITY-HARDENING-ROADMAP.md  docker-compose.homelab-net.yml  docker-compose.llm.yml  docker-compose.media.yml  docker-compose.network.yml  docker-compose.yml  pytest.ini
media-agent/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
media-agent/app/: README.md  __init__.py  action_catalog.py  action_service.py  config.py  download_options.py  logging.py  lookup.py  main.py  prowlarr_flow.py  router_contracts.py  router_flow_helpers.py  router_orchestrator.py  router_runtime_helpers.py  router_selection.py  router_state.py
media-agent/app/actions/: README.md  __init__.py  action_service.py  download_movie.py  download_options.py  download_tv.py  formatting.py  grab_movie.py  grab_tv.py  indexer_grab.py  indexer_search.py  lookup.py  prowlarr_flow.py  registry.py  search.py
media-agent/app/api/: README.md  __init__.py  auth.py  dependencies.py  errors.py  responses.py
media-agent/app/core/: README.md  __init__.py  config.py  models.py
media-agent/app/integrations/: README.md  gemini.py  ollama.py  prowlarr.py  qbittorrent.py  radarr.py  sonarr.py
media-agent/app/models/: __init__.py  actions.py  api.py  router.py
media-agent/app/router/: README.md  __init__.py  formatting.py  intent.py  orchestrator.py  parser.py  post_grab.py  router_contracts.py  router_orchestrator.py  router_policy.py  router_runtime_helpers.py  router_selection.py  router_state.py  session.py  smoke.py
media-agent/app/services/: README.md  (+7 more)
media-agent/tests/: conftest.py  test_action_handlers.py  test_action_registry.py  test_action_service.py  test_api.py  test_api_core.py  test_api_indexer_action.py  test_api_router_dispatch.py  test_api_router_matchers.py  test_api_router_selection.py  test_api_smoke_gate.py
src/homelab_workers/: Dockerfile  pyproject.toml
(+184 files in other folders)
