[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-agent"
version = "0.1.0"
description = "Internal media search / download agent (FastAPI) for the homelab stack."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# FastAPI idiom: Body(...) in defaults; SIM rules on migrated legacy code.
[tool.ruff.lint.per-file-ignores]
"app/api/routes/**" = ["B008"]
"app/**" = ["E501"]
"tests/**" = ["E501"]
"app/services/sonarr_release_pipeline.py" = ["SIM102", "SIM108"]
"app/services/torrent_naming.py" = ["SIM103"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Use a non-default cache path so a root-owned or Docker-created
# .pytest_cache/ in this tree does not break cache writes (Errno 13).
cache_dir = "build/pytest_cache"
