[project]
name = "homelab-workers"
version = "0.1.0"
description = "Python workers for homelab automation"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pytest-httpx>=0.30"]

[project.scripts]
torrent-health-ui = "homelab_workers.torrent_health_ui.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["src/homelab_workers/tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
